made page more responsive

--- a/public/userSettings.html
+++ b/public/userSettings.html
@@ -161,7 +161,7 @@
 
                 </div>
 
-                <div id="update-cancel-buttons" class="update-cancel-buttons hide" >
+                <div id="update-cancel-buttons" class="update-cancel-buttons hideVisibility" >
 
                     <input id="update-btn" class="btn update-btn" type="button" value="Update">
                     <input id="cancel-btn" class="btn cancel-btn" type="button" value="Cancel">
