added correct path for backgroud images

--- a/public/about.html
+++ b/public/about.html
@@ -33,7 +33,7 @@
 
             navMenu.innerHTML = `
 
-                <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+                <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
                 <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
                 <li id="stats-nav-item" class="nav-items" onclick="window.location ='/stats'">Stats</li>
                 <li id="settings-nav-item" class="nav-items" onclick="window.location ='/settings'">Settings</li>
@@ -46,7 +46,7 @@
 
             navMenu.innerHTML = `
 
-                <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+                <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
                 <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
                 <li id="signup-nav-item" class="nav-items" onclick="window.location ='/register'">Sign Up</li>
                 <li id="login-nav-item" class="nav-items" onclick="window.location ='/login'">Login</li>
