--- a/public/stats.html
+++ b/public/stats.html
@@ -56,7 +56,7 @@
 
     <div id="navbar-container">
         <ul id="nav-menu">
-            <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+            <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
             <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
             <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
             <li id="setting-nav-item" class="nav-items" onclick="window.location ='/settings'">Settings</li>
