--- a/public/userSettings.html
+++ b/public/userSettings.html
@@ -37,10 +37,10 @@
 
         <div id="navbar-container">
             <ul id="nav-menu">
-                <li class="nav-items skeleton skeleton-body-text" onclick="window.location ='/'">Home</li>
-                <li class="nav-items skeleton skeleton-body-text" onclick="window.location ='/play'">Find Waldo</li>
-                <li class="nav-items skeleton skeleton-body-text" onclick="window.location ='/stats'">Stats</li>
-                <li class="nav-items skeleton skeleton-body-text" onclick="window.location ='/about'">About</li>
+                <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
+                <li id="play-nav-item" class="nav-items" onclick="window.location ='/play'">Find Waldo</li>
+                <li id="stats-nav-item" class="nav-items" onclick="window.location ='/stats'">Stats</li>
+                <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
             </ul>
         </div>
 
