--- a/public/login.html
+++ b/public/login.html
@@ -54,7 +54,7 @@
 
     <div id="navbar-container">
       <ul id="nav-menu">
-        <li id="home-nav-item" class="nav-items" onclick="window.location ='/'">Home</li>
+        <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
         <li id="login-nav-item" class="nav-items" onclick="window.location ='/register'">Sign Up</li>
         <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
       </ul>
