--- a/public/play.html
+++ b/public/play.html
@@ -196,7 +196,7 @@
     </div>
     <div class="settings-modes-div">
 
-        <div class="settings-box-title">
+        <div id="country-count-settings-box-title" class="settings-box-title">
             <span class="settings-mode">Country Count</span>
 
             <!-- COUNTRY COUNT INPUT -->
@@ -210,9 +210,9 @@
             <div class="country-count-container">
                 <p>Add Only Selected Countries</p>
                 <div class="item">
-                    <div class="toggle-pill-color">
+                    <div id="add-selected-country-color" class="toggle-pill-color">
                         <input type="checkbox" id="add-selected-country-checkbox" name="check">
-                        <label for="add-selected-country-checkbox"></label>
+                        <label id="add-selected-country-label" for="add-selected-country-checkbox"></label>
                     </div>
                 </div>
             </div>
