removed show button on recent activities if items less than 11

--- a/public/stats.html
+++ b/public/stats.html
@@ -182,7 +182,7 @@
             </table>
 <!--            <a href="#">Show All</a>-->
 
-            <div class="button-div">
+            <div id="activity-button-div" class="button-div">
                 <input id="show-all-button" type="button" value="Show All">
                 <input id="show-less-button" class="hide" type="button" value="Show Less">
             </div>
