--- a/public/userSettings.html
+++ b/public/userSettings.html
@@ -128,7 +128,7 @@
                                 <span id="current-password-message" class="issue-message hideVisibility"></span>
                             </div>
 
-                            <input id="current-password-input" class="account-input" disabled type="text" placeholder="*******" />
+                            <input id="current-password-input" class="account-input password-input" disabled type="text" placeholder="*******" />
 
                             <div class="icon-container">
                                 <i class="fa-solid fa-pencil"></i>
@@ -149,7 +149,7 @@
                                 <span id="new-password-message" class="issue-message hideVisibility"></span>
                             </div>
 
-                            <input id="new-password-input" class="account-input" disabled type="text" placeholder="*******" />
+                            <input id="new-password-input" class="account-input password-input" disabled type="text" placeholder="*******" />
 
                             <div class="icon-container">
                                 <i class="fa-solid fa-pencil"></i>
