--- a/public/play.html
+++ b/public/play.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/playSettings.css">
     <link rel="stylesheet" type="text/css" href="/css/loader.css">
     <link rel="stylesheet" type="text/css" href="/css/nav.css">
-    <link rel="stylesheet" type="text/css" href="/css/skeletonloading.css">
+    <link rel="stylesheet" type="text/css" href="/css/skeletonLoading.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
