added ability to reset password via email

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
 
     <div id="navbar-container">
         <ul id="nav-menu">
-            <li id="home-nav-item" class="nav-items skeleton skeleton-body-text">Home</li>
-            <li id="login-nav-item" class="nav-items skeleton skeleton-body-text">Login</li>
-            <li id="about-nav-item" class="nav-items skeleton skeleton-body-text">About</li>
+            <li class="nav-items skeleton skeleton-body-text">Home</li>
+            <li class="nav-items skeleton skeleton-body-text">Login</li>
+            <li class="nav-items skeleton skeleton-body-text">About</li>
         </ul>
     </div>
 
