--- a/public/register.html
+++ b/public/register.html
@@ -137,6 +137,7 @@
                 <input id="signup-button" type="button" class="signup-button" value="Sign Up">
 
                 <p class="account-text">Already have an account? <a class="account-link" href="/login">Login</a></p>
+                <p class="account-text">Forgot Password? <a class="account-link" href="/reset-password">Reset</a></p>
 
 
             </div>
