--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login | Where on Earth is Waldo?</title>
+  <title>Reset Password | Where on Earth is Waldo?</title>
   <link type="text/css" rel="stylesheet" href="css/register.css" />
   <link type="text/css" rel="stylesheet" href="css/nav.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -18,26 +18,8 @@
 
     window.addEventListener('load', userAuthAPI.verifyToken.bind() );
 
-    let passwordIcons = document.getElementsByClassName('password-icon');
-
-    // allow users to see password
-    for( let x = 0; x < passwordIcons.length; x++ ){
-
-      passwordIcons[x].addEventListener('click', ()=>{
-
-        if( passwordIcons[x].parentElement.children[1].getAttribute('type') === 'password' ){
-
-          passwordIcons[x].parentElement.children[1].setAttribute('type', 'text')
-
-        }else{
-
-          passwordIcons[x].parentElement.children[1].setAttribute('type', 'password')
-
-        }
-      })
-
-    }
   </script>
+
 
 </head>
 <body>
@@ -56,6 +38,7 @@
       <ul id="nav-menu">
         <li id="home-nav-item" class="" onclick="window.location ='/'"><img class="home-img" src="../favicon.ico" alt=""></li>
         <li id="signup-nav-item" class="nav-items" onclick="window.location ='/register'">Sign Up</li>
+        <li id="login-nav-item" class="nav-items" onclick="window.location ='/login'">Login</li>
         <li id="about-nav-item" class="nav-items" onclick="window.location ='/about'">About</li>
       </ul>
     </div>
@@ -67,7 +50,7 @@
     <div class="register-items">
 
       <div class="register-items-header">
-        <h1 class="header-title">Welcome back</h1>
+        <h1 class="header-title">Forgot Password?</h1>
       </div>
 
       <div class="input-container">
@@ -78,7 +61,7 @@
             <i class="fa-solid fa-user"></i>
           </div>
 
-          <input id="usernameOrEmail"  class="account-input" type="email" placeholder="Username or Email" />
+          <input id="email"  class="account-input" type="email" placeholder="Email" />
 
           <div class="issue-container">
             <i class="fa-solid fa-exclamation-circle hideVisibility"></i>
@@ -87,41 +70,18 @@
 
         </div>
 
-
-        <div class="input-container-items" >
-
-          <div class="icon-container password-icon">
-            <i class="input-icon fa-solid fa-key"></i>
-          </div>
-          <input id="password" class="account-input" type="password" placeholder="Password" />
+        <input id="reset-password-button" type="button" class="reset-password-button" value="Reset Password">
 
 
-          <div class="issue-container">
-            <i class="fa-solid fa-exclamation-circle hideVisibility"></i>
-            <span class="issue-message hideVisibility"></span>
-          </div>
-
-        </div>
-
-        <div id="email-error" class="email-error"> <p class="email-error-text">Please verify your email first</p> </div>
-
-        <input id="login-button" type="button" class="login-button" value="Login">
-
-        <p class="account-text">Don't have an account? <a class="account-link" href="/register">Sign up</a></p>
-        <p class="account-text">Forgot Password? <a class="account-link" href="/reset-password">Reset</a></p>
+        <p id="password-reset-text" class="password-reset-text hideVisibility">Please Check Your Email to Finish Resetting Your Password</p>
+        <p class="account-text">Already have an account? <a class="account-link" href="/login">Login</a></p>
 
       </div>
 
 
     </div>
 
-    <!--<div class="gif">
-    </div>-->
-
-
-    <!--        <script type="text/javascript" src="./js/userAuthAPI.js" ></script>-->
-    <!--        <script type="text/javascript" src="./js/RegisterUser.js" ></script>-->
-    <script type="module" src="js/LoginUser.js" ></script>
+    <script type="text/javascript" src="./js/ForgotPassword.js"></script>
 
   </form>
 
