added where email to reset password is not sent if email does not exist

--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -73,7 +73,7 @@
         <input id="reset-password-button" type="button" class="reset-password-button" value="Reset Password">
 
 
-        <p id="password-reset-text" class="password-reset-text hideVisibility">Please Check Your Email to Finish Resetting Your Password</p>
+        <p id="password-reset-text" class="password-rest-text hideVisibility">If the email exists, an email will be sent shortly with steps to rest your password.</p>
         <p class="account-text">Already have an account? <a class="account-link" href="/login">Login</a></p>
 
       </div>
