--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -73,11 +73,12 @@
         <input id="reset-password-button" type="button" class="reset-password-button" value="Reset Password">
 
 
-        <p id="password-reset-text" class="password-rest-text hideVisibility">If the email exists, an email will be sent shortly with steps to rest your password.</p>
+        <p id="password-reset-text" class="password-reset-text hide">If the email exists, an email will be sent shortly with steps to reset your password.</p>
+        <p id="reset-sent-text" class="reset-sent-text hide">Please wait 30 minutes before requesting another password reset.</p>
         <p class="account-text">Already have an account? <a class="account-link" href="/login">Login</a></p>
 
-      </div>
 
+      </div>
 
     </div>
 
