fixed routes for post requests

--- a/public/createPassword.html
+++ b/public/createPassword.html
@@ -91,7 +91,7 @@
 
         <input id="invalid-request-button" type="button" class="reset-password-button hide" value="Reset Password" onclick="window.location.href= '/reset-password'">
 
-        <p id="password-reset-text" class="password-reset-text hideVisibility">Your Password has Been reset!</p>
+        <p id="password-reset-text" class="password-reset-text hideVisibility">Your password has been reset!</p>
 
       </div>
 
