updated text of adding selected countries

--- a/public/play.html
+++ b/public/play.html
@@ -208,7 +208,7 @@
 
             <!-- ADD ONLY SELECTED COUNTRIES -->
             <div class="country-count-container">
-                <p>Add Only Selected Countries</p>
+                <p>Add Only Selected Countries To Globe</p>
                 <div class="item">
                     <div id="add-selected-country-color" class="toggle-pill-color">
                         <input type="checkbox" id="add-selected-country-checkbox" name="check">
